@@ -24,7 +24,7 @@ set -e
 
 cat >exp <<EOF
 parity 17;
-0 1 0 7,8 "INIT";
+0 1 0 7,8;
 8 1 1 2;
 2 3 0 11,12;
 12 3 1 2,3;
@@ -43,7 +43,7 @@ parity 17;
 11 3 1 1,4;
 7 1 1 1,2;
 parity 13;
-0 1 0 1,2 "INIT";
+0 1 0 1,2;
 2 1 1 3;
 3 3 0 5,4;
 4 2 1 12,3;
@@ -58,7 +58,7 @@ parity 13;
 13 1 1 6,10;
 1 1 1 6,3;
 parity 5;
-0 1 0 2,3 "INIT";
+0 1 0 2,3;
 3 3 1 1;
 1 1 0 4,5;
 5 2 1 1,1;
